# fmh-funprofiler

./: .gitignore  LICENSE  README.md  environment.yaml  funcprofiler.py  funcprofiler_many.py  gather_output  ko_profiles  pyproject.toml  requirements.txt
demo/: list_of_files
fmh_funprofiler/: __init__.py
fmhfunprofiler/: __init__.py  funcprofiler.py  funcprofiler_many.py
src/fmh_funprofiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_funcprofiler.py  test_funcprofiler_many.py  test_package.py
