[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fmh-funprofiler"
version = "1.1.0"
description = "Metagenomic functional profiler using FracMinHash sketches and KEGG KOs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
funcprofiler = "fmhfunprofiler.funcprofiler:main"
funcprofiler-many = "fmhfunprofiler.funcprofiler_many:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fmhfunprofiler*"]
